# routing.go
@@ -47,6 +47,7 @@ func (r *Routing) setRouting() {
 		v1.PUT("/me", func(c *gin.Context) { r.mc.UpdateMe(c) })
 		v1.POST("/me/stripe-connect", func(c *gin.Context) { r.mc.CreateStripeConnect(c) })
 		v1.GET("/me/hosts", func(c *gin.Context) { r.mc.ReadHosts(c) })
+		v1.GET("/me/constructs", func(c *gin.Context) { r.mc.ReadConstructs(c) })
 
 		v1.GET("/users", func(c *gin.Context) { r.uc.Read(c) })
 		v1.POST("/users", func(c *gin.Context) { r.uc.Create(c) })
